# fp2mp-core

./: .env  .env.example  .gitignore  README.md  pyproject.toml  reference_eval.md
# optional path to persist wiki pages to disk/: codespatial_sq_003.md  codespatial_sq_003.meta.json  codespatial_sq_004.meta.json  index.md.md  index.md.meta.json  log.md.md  log.md.meta.json  mediator.md  mediator.meta.json  normative_sq_001.md  normative_sq_001.meta.json  normative_sq_002.meta.json  normative_sq_003.md  normative_sq_003.meta.json  redi_fusion.md  redi_fusion.meta.json  synthesis.md  synthesis.meta.json  websearch_sq_001.md  websearch_sq_001.meta.json  websearch_sq_002.md  websearch_sq_002.meta.json  websearch_sq_004.md  websearch_sq_004.meta.json  websearch_sq_005.md  websearch_sq_005.meta.json
.claude/: settings.local.json
data/: blocks.gpkg  blocks_LU.gpkg  blocks_agg_buildings.gpkg  blocks_with_services.gpkg  boundary.geojson  railways.geojson
data/benchmark/: evaluations_fp2mp.json
data/outputs/: max_accessibility.csv  mean_accessibility.csv  median_accessibility.csv  services_density.csv  shared_provision_subway.csv
data/platform/: animal_shelter.geojson  bakery.geojson  bank.geojson  bar.geojson  beauty.geojson  books.geojson  bus_station.geojson  bus_stop.geojson  cafe.geojson  cemetery.geojson  cinema.geojson  clothes.geojson  college.geojson  convenience.geojson  crematorium.geojson  dentist.geojson  dog_park.geojson  farmland.geojson  (+49 more)
examples/: benchmark_fp2mp.ipynb  boundary.geojson  eval_regression.py  test.ipynb
tests/: benchmark_smoke.py  conftest.py  test_answer.py  test_benchmark_smoke.py  test_blackboard.py  test_critic.py  test_curator.py  test_graph.py  test_redi.py  test_state.py  test_wiki.py
(+73 files in other folders)
