[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp2mp-core"
version = "0.1.0"
description = "Multi-agent open-ended QA: ReDI + BlackBoard + LLM-Wiki + LangGraph"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # LangGraph + LangChain
    "langgraph>=0.2.60",
    "langchain>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # Data validation
    "pydantic>=2.10.0",
    # Config
    "python-dotenv>=1.0.1",
    # Web search
    "tavily-python>=0.5.0",
    "ddgs>=0.1.0",
    # Document fetching
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    # Vector store (normative RAG)
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # Spatial analysis and OSM data (required for CodeSpatialAgent)
    "osmnx>=2.0.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "networkx>=3.0",
    "geopy>=2.4.0",
    "requests>=2.32.0",
    # Code execution sandbox (optional — falls back to subprocess)
    "e2b-code-interpreter>=1.0.0",
]

[project.optional-dependencies]
spatial-extended = [
    # Heavy optional deps: ML, advanced spatial
    "scikit-learn>=1.3",
    "pyproj>=3.6.0",
    "fiona>=1.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
